# TraceBoost

./: .gitignore  Cargo.toml  GEOSPATIAL_CRS_ARCHITECTURE_AND_DESIGN.md  README.md  SEISMIC_VOLUME_STORAGE_AND_BENCHMARKING.md
.github/workflows/: rust-ci.yml
app/: README.md
app/traceboost-app/: Cargo.toml  README.md
app/traceboost-app/src/: lib.rs  main.rs
app/traceboost-frontend/: README.md  package.json  tsconfig.json  vite.config.ts
app/traceboost-frontend/scripts/: setup-bun-links.ps1  verify-local-deps.mjs
app/traceboost-frontend/src/: App.svelte  main.ts
app/traceboost-frontend/src-tauri/: Cargo.toml  tauri.conf.json
app/traceboost-frontend/src-tauri/capabilities/: default.json
app/traceboost-frontend/src-tauri/src/: app_paths.rs  diagnostics.rs  lib.rs  preview_session.rs  preview_session_bench.rs  processing.rs  processing_cache.rs  processing_cache_bench.rs  workspace.rs
app/traceboost-frontend/src/lib/: bridge.ts  file-dialog.ts  processing-model.svelte.ts  section-service.ts  viewer-model.svelte.ts  viewer-store.ts
app/traceboost-frontend/src/lib/components/: DiagnosticsPanel.svelte  PipelineControlBar.svelte  PipelineOperatorEditor.svelte  PipelineSequenceList.svelte  PipelineSessionList.svelte  PipelineWorkspace.svelte  SidebarVolumeTreeNode.svelte  SpectrumInspector.svelte  VelocityModelWorkbench.svelte  ViewerMain.svelte  WorkflowSidebar.svelte
articles/: README.md
articles/architecture/: CONTRACT_ARCHITECTURE_AND_MIGRATION.md
articles/performance/: TRACEBOOST_PERFORMANCE_PROFILING_AND_OPTIMIZATIONS.md
contracts/: README.md
contracts/seis-contracts-core/: Cargo.toml
contracts/seis-contracts-core/src/: lib.rs
contracts/seis-contracts-interop/: Cargo.toml
contracts/seis-contracts-interop/src/: lib.rs
contracts/seis-contracts-operations/: Cargo.toml
contracts/seis-contracts-views/: Cargo.toml
contracts/seis-contracts-views/src/: lib.rs
contracts/ts/seis-contracts/: README.md  package.json
contracts/ts/seis-contracts/schemas/: seis-contracts.schema.json
crates/traceboost-app/: Cargo.toml
crates/traceboost-app/src/: main.rs
docs/: README.md  architecture.md  compute-storage-benchmark.md  crs-display-workspace-phase1.md  interfaces-and-automation.md  lossless-compression-research-and-benchmark-plan.md  multi-format-io-runtime-strategy.md  platform-relationship.md  processing-cache-benchmark-plan.md  product-overview.md  seismic-zfp-assessment-and-benchmark-plan.md  spectral-processing-implementation.md
docs/legacy/: README.md
docs/legacy/upscayl-import/: README.md  upscayl-architecture-analysis.md
io/: Cargo.toml  README.md  SGYX_DESIGN.md
io/benches/: ingest.rs
io/tests/: export.rs  hdf5.rs  inspect.rs  reader.rs
python/: README.md  pyproject.toml
python/src/traceboost_automation/: __init__.py  catalog.py  cli.py  client.py  conformance.py
python/src/traceboost_automation.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
runtime/: Cargo.toml  README.md
runtime/src/: error.rs  ingest.rs  lib.rs  main.rs  metadata.rs  preflight.rs  render.rs  store.rs  upscale.rs  validation.rs
runtime/tests/: pipeline.rs
scripts/: benchmark_f3_horizon_conversion.py  build_trace_order_tbvol_proxy.py  export_depth_velocity_cube.py  generate_f3_synthetic_survey.py  lossless_float_storage_bench.cpp  open-release-worktree.ps1  openvds_storage_bench.cpp  push-seisrefine.ps1  report_materialized_horizon_conversion.py  sgz_storage_bench.py  verify_segy_roundtrip_with_segyio.py
scripts/contracts-export/: Cargo.toml
scripts/contracts-export/src/: main.rs
test-data/f3 - Copy.tbvol/: manifest.json
test-data/f3.tbvol/: manifest.json
test-data/survey.zarr/: seisrefine.manifest.json  zarr.json
test-data/survey.zarr/amplitude/: zarr.json
test-data/survey.zarr/amplitude/c/0/0/: 0  1
test-data/survey.zarr/amplitude/c/0/1/: 0  1
test-data/survey.zarr/amplitude/c/1/0/: 0  1
test-data/survey.zarr/amplitude/c/1/1/: 0  1
