[workspace]
members = [
    "contracts/seis-contracts-core",
    "contracts/seis-contracts-views",
    "contracts/seis-contracts-interop",
    "io",
    "runtime",
    "app/traceboost-app",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
