[workspace]
members = [
    "contracts/seis-contracts-core",
    "contracts/seis-contracts-views",
    "contracts/seis-contracts-operations",
    "contracts/seis-contracts-interop",
    "io",
    "runtime",
    "app/traceboost-app",
    "app/traceboost-frontend/src-tauri",
    "scripts/contracts-export",
]
resolver = "3"

[workspace.package]
edition = "2024"
license = "MIT"
version = "0.1.0"

[workspace.dependencies]
schemars = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ts-rs = "10.1"

[patch.crates-io]
proj-sys = { path = "vendor/proj-sys" }
