[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "traceboost-automation"
version = "0.1.0"
description = "Thin Python automation wrapper around the local TraceBoost CLI workflows"
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[project.scripts]
traceboost-automation = "traceboost_automation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
