[package]
name = "seis-runtime"
version = "0.1.0"
edition = "2024"
license = "MIT"

[lib]
name = "seisrefine"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
ndarray = "0.17.2"
rayon = "1.11"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
seisdomain-core = { package = "seis-contracts-core", path = "../contracts/seis-contracts-core" }
seisdomain-views = { package = "seis-contracts-views", path = "../contracts/seis-contracts-views" }
sgyx = { package = "seis-io", path = "../io" }
thiserror = "2.0"
zarrs = { version = "0.23.7", default-features = true }

[dev-dependencies]
tempfile = "3.15"
