[package]
name = "traceboost-app"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
clap = { version = "4.6.0", features = ["derive"] }
seisrefine = { package = "seis-runtime", path = "../../runtime" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sgyx = { package = "seis-io", path = "../../io" }
