[package]
name = "seis-contracts-interop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "seisdomain_interop"

[dependencies]
serde.workspace = true
serde_json.workspace = true
seisdomain-core = { package = "seis-contracts-core", path = "../seis-contracts-core" }
seisdomain-views = { package = "seis-contracts-views", path = "../seis-contracts-views" }
