[package]
name = "seis-contracts-interop"
version.workspace = true
edition.workspace = true
license.workspace = true

[lib]
name = "seis_contracts_interop"

[dependencies]
ophiolite-seismic = { path = "../../../ophiolite/crates/ophiolite-seismic" }
schemars.workspace = true
serde.workspace = true
serde_json.workspace = true
ts-rs.workspace = true
seis_contracts_core = { package = "seis-contracts-core", path = "../seis-contracts-core" }
seis_contracts_views = { package = "seis-contracts-views", path = "../seis-contracts-views" }
