[package]
name = "contracts-export"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
schemars.workspace = true
serde_json.workspace = true
seis-contracts-core = { path = "../../contracts/seis-contracts-core" }
seis-contracts-operations = { path = "../../contracts/seis-contracts-operations" }
seis-contracts-views = { path = "../../contracts/seis-contracts-views" }
ts-rs.workspace = true
